Fixed notifications not showing

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -261,18 +261,33 @@ $main-font: "DroidSansM Nerd Font Mono";
 
 .not-sh {
   background-color: $bg-dim;
+  margin-left: 3.2rem;
+  margin-top: 1rem;
 }
 
 .notification {
   background-color: $bg-0;
   border-radius: 1rem;
   margin: 0.5rem;
+  padding: 1rem;
+  box-shadow: 1 3 0.4rem 0rem rgba(0, 0, 0, 0.40);
+  margin-bottom: .4rem;
 }
 
 .notif-close-btn {
   margin-right: 0.3rem;
+  border-radius: 3rem;
 }
 
 .notif-title {
   margin-left: .1rem;
+}
+
+.notif-gr-title {
+  margin-top: 3rem;
+  margin-left: 5rem;
+  font-size: 17;
+  font-weight: bold;
+  font-family: $main-font;
+  margin-bottom: 2rem;
 }
